p2/force-app/main/default/objects/Category__c/fields/Topic_Exams__c.field-meta.xml
<CustomField>
    <fullName>Topic_Exams__c</fullName>
    <label>Topic Exams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Topic_Exams</valueSetName>
    </valueSet>
</CustomField>